--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <a href="flat-list.html">flat list</a>
 </p>
 <p>
-<a href="block-tags.html">block-tags</a>
+<a href="nested-list.html">nested list</a>
+</p>
+<p>
+<a href="nested-list-resume.html">resume</a>
 </p>
   </body>
   </html>
